updated js QuizQs

--- a/JS-11(QuizApp)/index.html
+++ b/JS-11(QuizApp)/index.html
@@ -46,7 +46,9 @@
 
     <div id="testPage" class="second-div">
     </div>
-    <div class="next-div" id="nextDiv" class="animate__animated animate__pulse"><button onclick="renderPage()" class="next">Next</button></div>
+    <div class="next-div" id="nextDiv" class="animate__animated animate__pulse">
+        <button onclick="renderPage()" class="next">Next</button>
+    </div>
 
 
 
