--- a/JS-12/dashboard.html
+++ b/JS-12/dashboard.html
@@ -27,9 +27,17 @@
       <!-- Profile Div -->
     <div id="show"></div>
       <!-- Profile Div Ends Here -->
+    <div class="editor">
     <div id="editor">
 
     </div>
+    <button onclick="postData()">Post</button>
+  </div>
+  <div id="post-sec">
+
+  </div>
+
+
     <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/quill-image-resize-module@3.0.0/image-resize.min.js"></script>
     <script src="app.js"></script>
