updated new Assign

--- a/JS-12/dashboard.html
+++ b/JS-12/dashboard.html
@@ -31,7 +31,7 @@
     <div id="editor">
 
     </div>
-    <button onclick="postData()">Post</button>
+    <button onclick="postData()" class="btn-post">Post</button>
   </div>
   <div id="post-sec">
 
