--- a/JS-11(QuizApp)/index.html
+++ b/JS-11(QuizApp)/index.html
@@ -47,7 +47,7 @@
     <div id="testPage" class="second-div">
     </div>
     <div class="next-div" id="nextDiv" class="animate__animated animate__pulse">
-        <button onclick="renderPage()" class="next">Next</button>
+        <button onclick="renderPage()" class="next" id="next">Next</button>
     </div>
 
 
