--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -10,7 +10,7 @@
 <body>
     
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light" id="homeSec">
     <!-- Container wrapper -->
         <div class="container">
         <!-- Navbar brand -->
@@ -43,13 +43,13 @@
             <!-- Left links -->
             <ul class="navbar-nav me-auto mb-2 mb-lg-0 nav-list">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#home-sec">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About Me</a>
+                    <a class="nav-link" href="#about-me">About Me</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Skills</a>
+                    <a class="nav-link" href="#skills">Skills</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Projects</a>
@@ -63,15 +63,15 @@
             <div class="d-flex align-items-center links-list">
                 <a
                     class="btn btn-dark px-3"
-                    href=""
+                    href="https://github.com/Muhammadyasir7" target="_blank"
                     role="button"><i class="fab fa-github"></i></a>
                 <a
                     class="btn btn-dark px-3"
-                    href=""
+                    href="https://www.linkedin.com/in/muhammad-yasir-hussain" target="_blank"
                     role="button"><i class="fab fa-linkedin"></i></a>
                 <a
                     class="btn btn-dark px-3"
-                    href=""
+                    href="https://www.twitter.com/Yasir_lala7" target="_blank"
                     role="button"><i class="fab fa-twitter"></i></a>
             </div>
         </div>
@@ -84,7 +84,7 @@
     <section>
         <div class="hero">
             <div class="hero-text">
-                <h1>Hi,<br> I'm Yasir</h1>
+                <h1>Hi,<br> I'm Muhammad Yasir</h1>
                 <p>I am on the path to becoming a skilled Frontend Developer,<br>
                     dedicated to shaping the digital world with creative and responsive web interfaces
                 </p>
@@ -93,13 +93,22 @@
                 </p>
                 <button class="btn-contact">Contact Me</button>
             </div>
-            <div>
-                <img src="images/drawing.png" height="480px" alt="">
+            <div class="bg-pic">
+                <img src="images/drawing.png" height="480px" alt="" class="bg">
             </div>
         </div>
     </section>
     <!-- Hero Section -->
     
+    <section id="about-me" class="about">
+        <div>
+            <h1>About Me</h1>
+        </div>
+    </section>
+    <svg preserveAspectRatio="none" viewBox="0 0 100 102" height="75" width="100%" version="1.1" xmlns="http://www.w3.org/2000/svg" class="svgcolor-light">
+        <path d="M0 0 L50 100 L100 0 Z" fill="white" stroke="white"></path>
+      </svg>
+
 
     <script src="https://kit.fontawesome.com/0151bb5b76.js" crossorigin="anonymous"></script>
     <!-- MDB -->
