--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -140,9 +140,22 @@
             <div class="row row-cols-1 row-cols-md-2 g-4">
                 <div class="col">
                   <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top" alt="Hollywood Sign on The Hill"/>
+                    <img src="images/screencapture-terebyyasir-netlify-app-2023-11-24-19_19_15.png" class="card-img-top" alt="Hollywood Sign on The Hill"/>
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Tere by Yasir</h5>
+                      <p class="card-text">
+                        This is a longer card with supporting text below as a natural lead-in to
+                        additional content. This content is a little bit longer.
+                      </p>
+                    
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="images/screencapture-6511caa8cb8af903e7308565-fluffy-mochi-2a98b2-netlify-app-2023-11-24-19_33_19.png" class="card-img-top" alt="Palm Springs Road"/>
+                    <div class="card-body">
+                      <h5 class="card-title">Game Clone</h5>
                       <p class="card-text">
                         This is a longer card with supporting text below as a natural lead-in to
                         additional content. This content is a little bit longer.
@@ -152,21 +165,9 @@
                 </div>
                 <div class="col">
                   <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top" alt="Palm Springs Road"/>
+                    <img src="images/screencapture-js-calculator-by-yasir-netlify-app-2023-11-24-19_44_59.png" class="card-img-top" alt="Los Angeles Skyscrapers"/>
                     <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
-                      <p class="card-text">
-                        This is a longer card with supporting text below as a natural lead-in to
-                        additional content. This content is a little bit longer.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col">
-                  <div class="card">
-                    <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top" alt="Los Angeles Skyscrapers"/>
-                    <div class="card-body">
-                      <h5 class="card-title">Card title</h5>
+                      <h5 class="card-title">Calculator</h5>
                       <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
                     </div>
                   </div>
