--- a/Weather-App/index.html
+++ b/Weather-App/index.html
@@ -51,6 +51,7 @@
       </section>
 
     <!-- MDB -->
+    <script src="https://kit.fontawesome.com/0151bb5b76.js" crossorigin="anonymous"></script>
     <script
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"
