--- a/JS-13(StopWatch&timer)/index.html
+++ b/JS-13(StopWatch&timer)/index.html
@@ -14,11 +14,10 @@
             <div><i class="fa-solid fa-stopwatch"></i><a href="javascript:void(0)" id="stopwatch">STOPWATCH</a></div>
         </div>
         <div id="mainDiv">
-            <span class="num" id="hourss">0</span>
+            <input type="number" class="num-inp" maxlength="2" value="05" min="0" max="99" placeholder="05">
             <span>H</span>
-            <span class="num" id="min">0</span>
+            <input type="number" class="num-inp" maxlength="2" value="00" max="99" placeholder="00">
             <span>M</span>
-
         </div>
         <div class="head bottom" id="bottomDiv">
             <button onclick="" >START</button>
