--- a/NamazTimingApp/index.html
+++ b/NamazTimingApp/index.html
@@ -23,12 +23,14 @@
                 </div>
             </nav>
             <div>
+                <div>location</div>
                 <div></div>
-                <div></div>
-                <div></div>
+                <div id="nextTime"></div>
             </div>
         </div>
 
     </div>
+    <script type = "text/JavaScript" src = " https://MomentJS.com/downloads/moment.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
