--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -14,7 +14,7 @@
     <!-- Container wrapper -->
         <div class="container">
         <!-- Navbar brand -->
-        <a class="navbar-brand me-2" href="https://mdbgo.com/">
+        <a class="navbar-brand me-2" href="javascript:void(0)">
             <img
             src="images/36721120_2155924434637122_7468773511553613824_n.jpg"
             height="50"
@@ -118,6 +118,10 @@
                     CSS
                     JavaScript (ES6+)
                     TypeScript
+
+                    <!-- Hello! I’m Oliver Queen. Web Developer with over 8 years of experience. Experienced with all stages of the development cycle for dynamic web projects. Having an in-depth knowledge including advanced HTML5, CSS3, JavaScript, jQuery, Angular JS. Strong background in management and leadership. -->
+
+
             </div>
         </div>
     </section>
@@ -140,9 +144,49 @@
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
               <div class="card h-100">
-                <img src="images/screencapture-weatherapp-by-yasir-netlify-app-2023-12-16-19_48_18.png" class="card-img-top" alt="Hollywood Sign on The Hill"/>
+                <a href="https://weatherapp-by-yasir.netlify.app/" target="_blank"><img src="images/screencapture-weatherapp-by-yasir-netlify-app-2023-12-16-19_48_18.png" class="card-img-top" alt="weather app pic"/></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Weather App</h5>
+                  <p class="card-text">
+                    Technologies were used. HTML CSS JS and openweatherApi free.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <a href="https://6511caa8cb8af903e7308565--fluffy-mochi-2a98b2.netlify.app/"><img src="images/screencapture-6511caa8cb8af903e7308565-fluffy-mochi-2a98b2-netlify-app-2023-11-24-19_33_19.png" class="card-img-top" alt="Palm Springs Road"/></a>
+                <div class="card-body">
+                  <h5 class="card-title">Game Clone</h5>
+                  <p class="card-text">This is a short assignment in which we have to change pic/position on pressing key event.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <a href="https://terebyyasir.netlify.app/"><img src="images/screencapture-terebyyasir-netlify-app-2023-11-24-19_19_15.png" class="card-img-top" alt="Los Angeles Skyscrapers"/></a>
+                <div class="card-body">
+                  <h5 class="card-title">Tere by Yasir</h5>
+                  <p class="card-text">In this project a figma was given and we have made a clone.</p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <a href=""></a><img src="images/screencapture-js-calculator-by-yasir-netlify-app-2023-11-24-19_44_59.png" class="card-img-top" alt="Skyscrapers"/>
+                <div class="card-body">
+                  <h5 class="card-title">JS Calculator</h5>
+                  <p class="card-text">
+                    This is a simple Calculator and and till now that we have just learned ES5.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="col">
+              <div class="card h-100">
+                <a href="https://grumpybyyasir.netlify.app/" target="_blank"><img src="images/grumpy.png" class="card-img-top" alt="grumpybyyasir"/></a>
+                <div class="card-body">
+                  <h5 class="card-title">Grumpy by Yasir</h5>
                   <p class="card-text">
                     This is a longer card with supporting text below as a natural lead-in to
                     additional content. This content is a little bit longer.
@@ -152,54 +196,11 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <img src="images/screencapture-6511caa8cb8af903e7308565-fluffy-mochi-2a98b2-netlify-app-2023-11-24-19_33_19.png" class="card-img-top" alt="Palm Springs Road"/>
+                <a href="https://64c7e30eea1c1620affc0a21--heroic-khapse-94ced7.netlify.app/"><img src="images/saltnpaper.png" class="card-img-top" alt="saltnpaper"/></a>
                 <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a short card.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="images/screencapture-terebyyasir-netlify-app-2023-11-24-19_19_15.png" class="card-img-top" alt="Los Angeles Skyscrapers"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="images/screencapture-js-calculator-by-yasir-netlify-app-2023-11-24-19_44_59.png" class="card-img-top" alt="Skyscrapers"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
+                  <h5 class="card-title">Salt'n Paper Clone</h5>
                   <p class="card-text">
-                    This is a longer card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="images/grumpy.png" class="card-img-top" alt="Skyscrapers"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a longer card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.
-                  </p>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card h-100">
-                <img src="images/saltnpaper.png" class="card-img-top" alt="Skyscrapers"/>
-                <div class="card-body">
-                  <h5 class="card-title">Card title</h5>
-                  <p class="card-text">
-                    This is a longer card with supporting text below as a natural lead-in to
-                    additional content. This content is a little bit longer.
+                    This is a simple clone and only html, css and bootstrap technologies used.
                   </p>
                 </div>
               </div>
