--- a/todoList/index.html
+++ b/todoList/index.html
@@ -15,8 +15,9 @@
     </div>
     <ul id="todo-list">
       <!-- Todo items will be added here -->
+    </div>
     </ul>
   </div>
-  <script src="app.js"></script>
+  <script src="app.js" type="module"></script>
 </body>
 </html>
