--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -102,6 +102,8 @@
     
     <section id="about-me" class="about">
         <h1>About Me</h1>
+        <p>Here you will find more information about me, what I do, and my current skills mostly in terms of programming and technology
+        </p>
         <div class="about-main">
             <div>
                 <img src="images/36721120_2155924434637122_7468773511553613824_n.jpg" height="500px" class="profile-img" alt="">
@@ -140,6 +142,9 @@
     <!-- Projects Section Starts here -->
     <section id="project">
         <h1>Projects</h1>
+        <p>Here you will find some of the personal and clients projects that I created with each project containing its own case study
+          Software Screenshot
+          </p>
         <div class="project-main">
           <div class="row row-cols-1 row-cols-md-3 g-4">
             <div class="col">
@@ -155,7 +160,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <a href="https://6511caa8cb8af903e7308565--fluffy-mochi-2a98b2.netlify.app/"><img src="images/screencapture-6511caa8cb8af903e7308565-fluffy-mochi-2a98b2-netlify-app-2023-11-24-19_33_19.png" class="card-img-top" alt="Palm Springs Road"/></a>
+                <a href="https://6511caa8cb8af903e7308565--fluffy-mochi-2a98b2.netlify.app/" target="_blank"><img src="images/screencapture-6511caa8cb8af903e7308565-fluffy-mochi-2a98b2-netlify-app-2023-11-24-19_33_19.png" class="card-img-top" alt="Palm Springs Road"/></a>
                 <div class="card-body">
                   <h5 class="card-title">Game Clone</h5>
                   <p class="card-text">This is a short assignment in which we have to change pic/position on pressing key event.</p>
@@ -164,7 +169,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <a href="https://terebyyasir.netlify.app/"><img src="images/screencapture-terebyyasir-netlify-app-2023-11-24-19_19_15.png" class="card-img-top" alt="Los Angeles Skyscrapers"/></a>
+                <a href="https://terebyyasir.netlify.app/" target="_blank"><img src="images/screencapture-terebyyasir-netlify-app-2023-11-24-19_19_15.png" class="card-img-top" alt="Los Angeles Skyscrapers"/></a>
                 <div class="card-body">
                   <h5 class="card-title">Tere by Yasir</h5>
                   <p class="card-text">In this project a figma was given and we have made a clone.</p>
@@ -173,7 +178,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <a href=""></a><img src="images/screencapture-js-calculator-by-yasir-netlify-app-2023-11-24-19_44_59.png" class="card-img-top" alt="Skyscrapers"/>
+                <a href="" target="_blank"></a><img src="images/screencapture-js-calculator-by-yasir-netlify-app-2023-11-24-19_44_59.png" class="card-img-top" alt="Skyscrapers"/>
                 <div class="card-body">
                   <h5 class="card-title">JS Calculator</h5>
                   <p class="card-text">
@@ -196,7 +201,7 @@
             </div>
             <div class="col">
               <div class="card h-100">
-                <a href="https://64c7e30eea1c1620affc0a21--heroic-khapse-94ced7.netlify.app/"><img src="images/saltnpaper.png" class="card-img-top" alt="saltnpaper"/></a>
+                <a href="https://64c7e30eea1c1620affc0a21--heroic-khapse-94ced7.netlify.app/" target="_blank"><img src="images/saltnpaper.png" class="card-img-top" alt="saltnpaper"/></a>
                 <div class="card-body">
                   <h5 class="card-title">Salt'n Paper Clone</h5>
                   <p class="card-text">
