--- a/firebase-chatApp/index.html
+++ b/firebase-chatApp/index.html
@@ -119,17 +119,13 @@
         </div>
   
         <!-- Submit button -->
-        <button type="submit" class="btn btn-primary btn-block mb-4">Sign in</button>
+        <button type="submit" class="btn btn-primary btn-block mb-4" id="signIn">Sign in</button>
   
         <!-- Register buttons -->
-        <div class="text-center">
-          <p>Not a member? <a  class="nav-link"
-            id="tab-register"
-            href="#pills-register"
-            role="tab"
-            >Register</a></p>
-        </div>
       </form>
+    </div>
+    <div class="text-center">
+      <p>Not a member? <a href="#pills-register">Register</a></p>
     </div>
     <div
       class="tab-pane fade"
@@ -167,8 +163,8 @@
   
         <!-- Username input -->
         <div data-mdb-input-init class="form-outline mb-4">
-          <input type="text" id="registerUsername" class="form-control" />
-          <label class="form-label" for="registerUsername">Username</label>
+          <input type="number" id="registerUsernameNum" class="form-control" />
+          <label class="form-label" for="registerUsername">Phone Number</label>
         </div>
   
         <!-- Email input -->
@@ -205,7 +201,7 @@
         </div>
   
         <!-- Submit button -->
-        <button data-mdb-ripple-init type="submit" class="btn btn-primary btn-block mb-3">Sign in</button>
+        <button data-mdb-ripple-init type="submit" id="register" class="btn btn-primary btn-block mb-3">Sign in</button>
       </form>
     </div>
   </div>
@@ -217,6 +213,7 @@
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"
     ></script>
+    <script src="./js/firebase.js" type="module"></script>
     <script src="app.js"></script>
 </body>
 </html>
