--- a/firebase-chatApp/index.html
+++ b/firebase-chatApp/index.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <section class="login-sec">
-        <h1>ChatApp</h1>
+        <h1 class="heading">ChatApp</h1>
     <!-- Pills navs -->
     <ul class="nav nav-pills nav-justified mb-3" id="ex1" role="tablist">
         <li class="nav-item" role="presentation">
@@ -62,14 +62,13 @@
       role="tabpanel"
       aria-labelledby="tab-login"
     >
-      <form>
         <div class="text-center mb-3">
           <p>Sign in with:</p>
           <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
             <i class="fab fa-facebook-f"></i>
           </button>
   
-          <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
+          <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1" id="signUpWithGoogle">
             <i class="fab fa-google"></i>
           </button>
   
@@ -136,11 +135,11 @@
       <form>
         <div class="text-center mb-3">
           <p>Sign up with:</p>
-          <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
+          <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1" >
             <i class="fab fa-facebook-f"></i>
           </button>
   
-          <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1">
+          <button data-mdb-ripple-init type="button" class="btn btn-secondary btn-floating mx-1" id="signUpWithGoogle">
             <i class="fab fa-google"></i>
           </button>
   
@@ -202,7 +201,7 @@
   
         <!-- Submit button -->
         <button data-mdb-ripple-init type="submit" id="register" class="btn btn-primary btn-block mb-3">Sign in</button>
-      </form>
+
     </div>
   </div>
 </section>
@@ -213,6 +212,7 @@
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.1.0/mdb.umd.min.js"
     ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="./js/firebase.js" type="module"></script>
     <script src="app.js"></script>
 </body>
