--- a/firebase-chatApp/chatui.html
+++ b/firebase-chatApp/chatui.html
@@ -23,12 +23,43 @@
 </head>
 <body>
     <div class="main">
-        <aside>
-
+        <aside class="d-flex justify-content-evenly">
+            <div class="h-100 w-25 bg-primary text-bg-light rounded">
+                <nav class="d-flex flex-column align-items-center justify-content-between h-100">
+                    <ul class="d-flex flex-column justify-content-center align-items-center m-0 mt-5 p-0 gap-5">
+                        <a href=""><li><i class="fas fa-home"></i></li></a>
+                        <a href=""><li><i class="fas fa-message"></i></li></a>
+                        <a href=""><li><i class="fas fa-star"></i></li></a>
+                        <a href=""><li><i class="fas fa-qrcode"></i></li></a>
+                        
+                    </ul>
+                  <div class="mb-5">
+                        <a href=""><li><i class="fas fa-user"></i></li></a>
+                    </div>
+                </nav>
+            </div>
+            <div class="ms-0 second mt-3 mb-3">
+                <div class="form-outline" data-mdb-input-init>
+                    <input type="search" id="form1" class="form-control" placeholder="Type query" aria-label="Search" />
+                </div>
+                <div class="mt-3">
+                    <div class="person d-flex gap-3 align-items-center rounded">
+                        <div>
+                            <li class="user-icon"><i class="fas fa-user "></i></li>
+                        </div>
+                        <div>
+                            <p class="m-0">Name</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </aside>
-        <button class="btn btn-primary" id="signOut">SignOut</button>
+        <section class="chat-sec">
+
+            <!-- <button class="btn btn-primary" id="signOut">SignOut</button> -->
+        </section>
     </div>
 
-    <script type="module" src="./js/firebase.js"></script>
+    <script type="module" src="./js/chat.js"></script>
 </body>
 </html>
