--- a/firebase-chatApp/chatui.html
+++ b/firebase-chatApp/chatui.html
@@ -43,12 +43,9 @@
                     <input type="search" id="form1" class="form-control" placeholder="Type query" aria-label="Search" />
                 </div>
                 <div class="mt-3">
-                    <div class="person d-flex gap-3 align-items-center rounded">
-                        <div>
-                            <li class="user-icon"><i class="fas fa-user "></i></li>
-                        </div>
-                        <div>
-                            <p class="m-0">Name</p>
+                    <div>
+                        <div id="user-list" class="d-flex justify-content-around align-items-center flex-column">
+                            
                         </div>
                     </div>
                 </div>
